--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ body{
 
 header{
     height: 75px;
+    
 }
 
 header nav{
@@ -40,6 +41,7 @@ header nav{
     position: relative;
     float: right;
     overflow: hidden;
+    z-index: 1000;
 }
 header nav ul{
     text-align: center;
@@ -127,6 +129,55 @@ header.sticky{
 
 
 /* Main section */
+
+/* Contact Page */
+
+.contact{ 
+    animation: in 1s ease;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards; 
+    background-color: red;
+    width: 20vw;
+    height: 100vh;
+    position: absolute;
+    transform: translate(400%, 0%);
+    z-index: 999;
+    display: block;
+}
+
+@keyframes in{
+    0%{
+        transform: translate(400%, 0%);
+        display: block;
+    }
+    100%{
+        transform: translate(500%, 0%);
+        display: none;
+    }
+    
+}
+
+.contact.active{
+    animation: out 1s ease;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    background-color: red;
+    width: 20vw;
+    height: 100vh;
+    position: absolute;
+    transform: translate(400%, 0%);
+    z-index: 999;
+    display: block;
+}
+
+@keyframes out{
+    0%{
+        transform: translate(500%, 0%);
+    }
+    100%{
+        transform: translate(400%, 0%);
+    }
+}
 
 /* First Page */
 
@@ -235,12 +286,12 @@ header.sticky{
     margin-top: 5%;
 }
 
-.third .container .column .row#post1{
+.third .container .column .row{
 
     margin-left: 10%;
 }
 
-.third .container .column .row#post1 .blogcard{
+.third .container .column .row .blogcard{
     width: 100%;
     height: 154px;
     display: flex;
@@ -248,19 +299,19 @@ header.sticky{
     background-color: #3aff9338;
 }
 
-.third .container .column .row#post1 img{
+.third .container .column .row img{
     width: 25%;
     height: 150px;
     padding-left: 2px;
     position: relative;
 }
 
-.third .container .column .row#post1 p a{
+.third .container .column .row p a{
     text-decoration: none;
     color: #8ce08c80;
 }
 
-.third .container .column .row#post1 p{
+.third .container .column .row p{
     display: inline-block;
     align-self: flex-start;
     font-size: 1.3em;
@@ -269,86 +320,10 @@ header.sticky{
     margin: 15px;
 }
 
-.third .container .column .row#post1 p a:hover{
+.third .container .column .row p a:hover{
     color: seagreen;
 }
 
-.third .container .column .row#post2{
-
-    margin-left: 10%;
-}
-
-.third .container .column .row#post2 .blogcard{
-    width: 100%;
-    height: 154px;
-    display: flex;
-    align-items: center;
-    background-color: #3aff9338;
-}
-
-.third .container .column .row#post2 img{
-    width: 25%;
-    height: 150px;
-    position: relative;
-    padding-left: 2px;
-}
-
-.third .container .column .row#post2 p a{
-    text-decoration: none;
-    color: #8ce08c80;
-}
-
-.third .container .column .row#post2 p{
-    display: inline-block;
-    align-self: flex-start;
-    font-size: 1.3em;
-    font-family: 'Staatliches', cursive;
-    letter-spacing: 5px;
-    margin: 15px;
-}
-
-.third .container .column .row#post2 p a:hover{
-    color: seagreen;
-}
-
-.third .container .column .row#post3{
-
-    margin-left: 10%;
-}
-
-.third .container .column .row#post3 .blogcard{
-    width: 100%;
-    height: 154px;
-    display: flex;
-    align-items: center;
-
-    background-color: #3aff9338;
-}
-
-.third .container .column .row#post3 img{
-    width: 25%;
-    height: 150px;
-    position: relative;
-    padding-left: 2px;
-}
-
-.third .container .column .row#post3 p a{
-    text-decoration: none;
-    color: #8ce08c80;
-}
-
-.third .container .column .row#post3 p{
-    display: inline-block;
-    align-self: flex-start;
-    font-size: 1.3em;
-    font-family: 'Staatliches', cursive;
-    letter-spacing: 5px;
-    margin: 15px;
-}
-
-.third .container .column .row#post3 p a:hover{
-    color: seagreen;
-}
 
 /* Fourth Page */
 
@@ -507,9 +482,10 @@ footer h4{
 
 /* 
 
-    Begin contact page
-    Footer section and newsletter
+    Polish contact page
+    Fix animation contact page
     Animate elements on page
     Maybe a loading screen
+    Responsive everything
 
     */
