--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,13 @@
 
 html{
     scroll-behavior: smooth;
+    max-width: 100% !important;
+    max-height: 100% !important;
 }
 
 body{
     background-color: #FFF4E9;
-    overflow-y: hidden;
+    overflow-y: hidden; 
     overflow-x: hidden;
 
     animation: fadein ease 2s;
@@ -34,7 +36,7 @@ body{
 /* Header section & Nav bar */
 
 header{
-    height: 75px;
+    height: 10vh;
     
 }
 
@@ -135,13 +137,12 @@ header.sticky{
 /* Contact Page */
 
 .contact{ 
-    background-color: red;
     width: 20vw;
     height: 100vh;
     position: absolute;
     transform: translate(500%, 0%);
     z-index: 999;
-    display: block;
+    display: none;
 }
 
 @keyframes in{
@@ -249,6 +250,11 @@ header.sticky{
     z-index: 9;
 }
 
+.row#first{
+    width: 100vw;
+    height: 90vh;
+}
+
 .row:after{
     content: "";
     display: table;
@@ -346,10 +352,6 @@ header.sticky{
 
 .third .container .column .row{
     margin-top: 5%;
-}
-
-.third .container .column .row{
-
     margin-left: 10%;
 }
 
@@ -358,6 +360,7 @@ header.sticky{
     height: 154px;
     display: flex;
     align-items: center;
+    justify-content: flex;
     background-color: #3aff9338;
 }
 
