--- a/css/styles.css
+++ b/css/styles.css
@@ -7,14 +7,14 @@
 }
 
 html{
-    scroll-behavior: smooth;
+   /* scroll-behavior: smooth; */
     max-width: 100% !important;
     max-height: 100% !important;
 }
 
 body{
     background-color: #FFF4E9;
-    overflow-y: hidden; 
+   /* overflow-y: hidden; */
     overflow-x: hidden;
 
     animation: fadein ease 2s;
