--- a/css/responsive.css
+++ b/css/responsive.css
@@ -135,7 +135,7 @@
     }
 }
 
-@media (max-width: 1024px){
+@media only screen and (max-width: 1024px){
     html{
         scroll-behavior: smooth;
     }
@@ -200,7 +200,7 @@
     }
 }
 
-@media (max-width: 768px){
+@media only screen and (max-width: 768px){
     html{
         scroll-behavior: smooth;
     }
@@ -325,8 +325,8 @@
     }
 }
 
-@media (max-width: 480px){
-    @media (max-height: 320px){
+@media only screen and (max-width: 480px){
+    @media only screen and (max-height: 320px){
     
     #logo img{
         margin-top: 20px;
@@ -511,7 +511,7 @@
 
 }
 
-    @media (min-height: 321px){
+    @media only screen and (min-height: 321px){
 
         #logo img{
             margin-top: 20px;
