--- a/css/styles.css
+++ b/css/styles.css
@@ -1071,6 +1071,10 @@ footer h4{
 }
 
     @media only screen and (min-height: 321px){
+        html{
+            overflow-y: scroll;
+            overflow-x: hidden;
+        }
 
         #logo img{
             margin-top: 20px;
