--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 }
 
 html{
+    
     scroll-behavior: smooth;
     max-width: 100% !important;
     max-height: 100% !important;
@@ -1074,6 +1075,11 @@ footer h4{
         html{
             overflow-y: scroll;
             overflow-x: hidden;
+            
+        }
+
+        body{
+            overflow: hidden;
         }
 
         #logo img{
@@ -1105,6 +1111,7 @@ footer h4{
             transform: translate(0%, 10%);
             width: 400px;
             height: 400px;
+            
         }
 
         .second .container .row .column{
@@ -1130,11 +1137,12 @@ footer h4{
         }
 
         .second .container .row .column #anim2{
-            width: 400px;
-            height: 400px;
+            width: 350px;
+            height: 350px;
             margin-top: -160px;
-            transform: translate(0%, 75%);
+            transform: translate(0%, 115%);
             z-index: -10;
+
         }
 
         .third .container .column h1#title{
@@ -1276,9 +1284,12 @@ footer h4{
     .second .container .row .column{
         margin-top: 40px;
     }
+    
 
     .second .container .row .column #anim2{
-        margin-top: -140px;
+        margin-top: -160px;
+        width: 300px;
+        height: 300px;
     }
 
     .third .container .column h1#title{
